# cba-yaafe-extension

./: .gitignore  CMakeLists.txt  FEATURES.md  README.md  index.html  make_doc.sh  params.json
doc/: .buildinfo  FEATURES.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_static/: default.css
src_cpp/: CMakeLists.txt
src_cpp/cba-yaafe-extension/: CMakeLists.txt  registration.cpp  registration.h
src_cpp/cba-yaafe-extension/audio/: AccumulateSameValues.cpp  AccumulateSameValues.h  Binarization.cpp  Binarization.h  DBConversion.cpp  DBConversion.h  DCOffsetFilter.cpp  DCOffsetFilter.h  DilationFilter.cpp  DilationFilter.h  ErosionFilter.cpp  ErosionFilter.h  FrameSum.cpp  FrameSum.h  PeakDetection.cpp  PeakDetection.h  SimpleNoiseGate.cpp  SimpleNoiseGate.h  SimpleThresholdClassification.cpp  SimpleThresholdClassification.h  SubRunningAverage.cpp  SubRunningAverage.h  WindowConvolution.cpp  WindowConvolution.h  WindowNormalize.cpp  WindowNormalize.h
src_python/: CMakeLists.txt  FEATURES.rst  cba-yaafe-extension.py  cba_yaafe_extension.py  conf.py  yaafe_cba.py
